# pdf_image_table_cropper

./: .gitignore  .pre-commit-config.yaml  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
pdf_cropper/: __init__.py  cli.py  constants.py  core.py  daemon.py  models.py  sdk.py
