[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-image-table-cropper"
version = "0.1.0"
description = "Crop image/table/code regions from PDF files and export metadata"
readme = "README.en.md"
requires-python = ">=3.10"
authors = [{ name = "pdf-image-table-cropper maintainers" }]
license = { text = "MIT" }
dependencies = [
  "httpx[socks]==0.28.1",
  "doclayout-yolo==0.0.4",
  "huggingface-hub>=0.32.4",
  "opencv-python>=4.8.0",
  "pillow>=11.0.0",
  "pypdfium2>=4.30.0",
  "torch>=2.6.0,<3",
  "transformers>=4.46.0",
]

[project.scripts]
pdf-image-table-cropper = "pdf_cropper.cli:main"

[tool.setuptools]
packages = ["pdf_cropper"]
